struct AgentClientID {
    SessionID   int64	// 客户端在网关上的SessionID
	NodeID 	    string	// 客户端在哪个网关
}

// backend ->agent 切断用户连接
[AutoMsgID MsgDir:"*->agent"]
struct AgentCloseClientACK {
    ID []int64
	All bool
}

// agent -> backend 客户端断开
[AutoMsgID]
struct AgentClientClosedNotifyACK {
    ID 	AgentClientID
}



// agent <-> backend 在网关和后端服务器之间传输协议
[AutoMsgID]
struct AgentTransmitACK {
    MsgID uint32  // 用户消息ID
    MsgData bytes // 用户消息数据

    ClientID int64       // 单发
    ClientIDList []int64 // 列表发
    All bool             // 全发
}


[AutoMsgID MsgDir:"client->agent->*"]
struct AgentBindBackendREQ {
    NodeID string
	Token string
}

[AutoMsgID MsgDir:"*->agent->client"]
struct AgentBindBackendACK {
    Code ResultCode
    NodeID string
}